<resources>
    <string name="app_name">Food Network</string>
    <string name="msg_no_meal_types">There are no meal types to show right now. Refresh.</string>
    <string name="msg_no_meals">There are no meals to show right now. Refresh.</string>
    <string name="title">Title</string>
    <string name="recipe">Recipe</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="prep_time">Prep Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_meal_uploaded">Meal uploaded to server successfully. Click to view.</string>
    <string name="meal_uploaded">Meal Uploaded</string>
    <string name="prep_time_w_placeholder">%1$d:%2$d</string>
    <string name="required">Required</string>
    <string name="nothing_is_made_in_no_time">Nothing is made in no time! :)</string>
    <string name="food_category">Food Category:</string>
    <string name="create_meal_title">Add new recipe</string>
    <string name="action_add_meal">Add Meal</string>
    <string name="action_upvote">Upvote</string>
    <string name="no_connectivity">Sorry, no internet connection :(</string>
    <string name="prep_time_hint">Preparation Time:</string>
    <string name="message">Share your recipes with the world</string>
    <string name="no_of_servings_hint">Number of Servings</string>
    <string name="snackbar_message">Recipe upvoted!</string>
    <string name="undo">UNDO</string>
    <string name="prep_time_label">Preparation Time: " "</string>
    <string name="no_of_servings">Number of Servings:</string>
    <string name="created_at">Created at</string>
</resources>